--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.12.7",
+    "swr": "^2.3.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.7",
     "tailwindcss-animate": "^1.0.7",
