--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+  "format": "eslint . --fix && prettier --write .",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -42,10 +43,12 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.7",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "prettier": "^3.6.0"
   }
 }
