--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ PROXY_PASS=tttt8820+
 
 # 開発時にプロキシを無効にする場合は以下を設定
 # USE_PROXY=false
+
+# Supabase設定
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
