--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate-data": "node scripts/migrate-data.js"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
@@ -18,6 +19,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@supabase/supabase-js": "^2.39.0",
     "@types/canvas-confetti": "^1.6.4",
     "@types/cheerio": "^0.22.35",
     "@types/node": "^20.14.12",
